// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders a Button flat 1`] = `
<div>
  <button
    class="sc-bcXHqe kABrKC"
  >
    this is a Button 
    flat
     
  </button>
  <button
    class="sc-bcXHqe eIGSgv"
  >
    this is a small Button 
    flat
     
  </button>
  <button
    class="sc-bcXHqe hbiXmL"
  >
    this is a narrow Button 
    flat
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button link 1`] = `
<div>
  <button
    class="sc-bcXHqe hwiGht"
  >
    this is a Button 
    link
     
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 28 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    class="sc-bcXHqe hwiGht"
  >
    this is a small Button 
    link
     
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 28 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    class="sc-bcXHqe hwiGht"
  >
    this is a narrow Button 
    link
     
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 28 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> it renders a Button naked 1`] = `
<div>
  <button
    class="sc-bcXHqe cfGWSN"
  >
    this is a Button 
    naked
     
  </button>
  <button
    class="sc-bcXHqe kdSVfY"
  >
    this is a small Button 
    naked
     
  </button>
  <button
    class="sc-bcXHqe kxYXcw"
  >
    this is a narrow Button 
    naked
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button navLink 1`] = `
<div>
  <button
    class="sc-bcXHqe bdrMdS"
  >
    this is a Button 
    navLink
     
  </button>
  <button
    class="sc-bcXHqe bdrMdS"
  >
    this is a small Button 
    navLink
     
  </button>
  <button
    class="sc-bcXHqe bdrMdS"
  >
    this is a narrow Button 
    navLink
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button primary 1`] = `
<div>
  <button
    class="sc-bcXHqe giqjOB"
  >
    this is a Button 
    primary
     
  </button>
  <button
    class="sc-bcXHqe guOFGk"
  >
    this is a small Button 
    primary
     
  </button>
  <button
    class="sc-bcXHqe bUsDoQ"
  >
    this is a narrow Button 
    primary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button secondary 1`] = `
<div>
  <button
    class="sc-bcXHqe iRwlKl"
  >
    this is a Button 
    secondary
     
  </button>
  <button
    class="sc-bcXHqe evPepU"
  >
    this is a small Button 
    secondary
     
  </button>
  <button
    class="sc-bcXHqe liZAkQ"
  >
    this is a narrow Button 
    secondary
     
  </button>
</div>
`;

exports[`<Button /> renders 1`] = `
<div>
  <button
    class="sc-bcXHqe iRwlKl"
  >
    A button
  </button>
</div>
`;

exports[`<Button /> renders as a link 1`] = `
<div>
  <a
    class="sc-bcXHqe iRwlKl"
    href="http://www.turfu.com"
  >
    A button
  </a>
</div>
`;

exports[`<Button /> renders as div 1`] = `
<div>
  <div
    class="sc-bcXHqe iRwlKl"
  >
    A button
  </div>
</div>
`;
